# encrypted_chat

./: .gitignore  READEME.md  README.md  pyproject.toml  trial.py
chat/: ezio_client.py  server.py
string_encryption/: crypt.py  encrypt.py  key.fernet  key_generation.py
