[tool.poetry]
name = "encrypted_chat"
version = "0.1.0"
description = ""
authors = ["Ez <ezioxxk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^38.0.3"
redis = "^4.3.4"
rsocket = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
